--- a/index.html
+++ b/index.html
@@ -11,6 +11,55 @@
 	<link rel="stylesheet" href="./css/staticPage.css">
 </head>
 <body>
-	
+	<div class="app">
+		<div class="header">
+			<img class= "icon-image header_question-mark" src="./images/icon_info_question.svg" alt="">
+			<div class="info">
+				<div class="info_close">
+					<img class="icon-image info_close_icon" src="./images/icon_info_xmark.svg" alt="">
+				</div>
+				<h2 class="info_title">how to play</h2>
+				<div class="info_section info_success">
+					<div class="info_section_images">
+						<img src="./images/img_info_stacked.png" alt="">
+						<img src="./images/img_info_finger.png" alt="">
+					</div>
+					<p>tap to stack</p>
+				</div>
+				<div class="info_section info_fail">
+					<div class="info_section_images">
+						<img src="./images/img_info_unstacked.png" alt="">
+						<img src="./images/img_info_finger.png" alt="">
+					</div>
+					<p>too early / too late</p>
+					<p>= game over</p>
+				</div>
+			</div>
+		</div>
+		<main class="main">
+			<h1>stack</h1>
+			<h2>tap to start</h2>
+			<div class="box">
+				<div class="box_face box_face-top">
+					<div class="box_face_text">easy</div>
+				</div>
+				<div class="box_face box_face-bottom">
+					<div class="box_face_text">easy</div>
+				</div>
+				<div class="box_face box_face-front">
+					<div class="box_face_text">normal</div>
+				</div>
+				<div class="box_face box_face-back">
+					<div class="box_face_text">normal</div>
+				</div>
+				<div class="box_face box_face-left">
+					<div class="box_face_text">hard</div>
+				</div>
+				<div class="box_face box_face-right">
+					<div class="box_face_text">hard</div>
+				</div>
+			</div>
+		</main>
+	</div>
 </body>
 </html>
