--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<img class="info_section_images_item" src="./images/img_info_stacked.png" alt="">
 						<img class="info_section_images_item info_section_images_finger" src="./images/img_info_finger.png" alt="">
 					</div>
-					<p>tap to stack</p>
+					<p>press s to stack</p>
 				</div>
 				<div class="info_section info_fail">
 					<div class="info_section_images">
@@ -44,7 +44,7 @@
 			</div>
 		</div>
 		<main class="main">
-			<h1 class="main_title">stack</h1>
+			<h1 class="main_title">pres  S </h1>
 			<h2 class="main_instruction">choose mode</h2>
 			<div class="box">
 				<div class="box_face box_face-top">
