--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</div>
 		</div>
 		<main class="main">
-			<h1 class="main_title">pres  S </h1>
+			<h1 class="main_title">press "S" </h1>
 			<h2 class="main_instruction">choose mode</h2>
 			<div class="box">
 				<div class="box_face box_face-top">
